# web-ml-demo

./: IMPLEMENTATION_GUIDE.md  PROJECT_PLAN.md  README.md  TECH_STACK_DOCUMENTATION.md
model-dev/: build_model.py  pyproject.toml
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
web/public/: model-package.json
web/src/: App.tsx  main.jsx  main.tsx
web/src/components/: DemoPredictor.jsx  DemoPredictor.tsx
web/src/hooks/: useModelLoader.js  useModelLoader.ts  usePredict.js  usePredict.ts
web/src/types/: features.ts  index.ts  model.ts  worker-imports.d.ts  worker-messages.ts
web/src/workers/: predict.worker.js  predict.worker.ts
