[project]
name = "web-ml-demo"
version = "0.1.0"
description = "ML model development for browser demo"
requires-python = ">=3.9"
dependencies = [
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "skl2onnx>=1.16.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "onnxmltools>=1.12.0"
]

[tool.uv]
dev-dependencies = []